--- a/ProductCatalogClient/Views/_ViewImports.cshtml
+++ b/ProductCatalogClient/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ProductCatalogClient
 @using ProductCatalogClient.Models
+@using ProductCatalogData.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
